--- a/c/src/lib/libbsp/epiphany/parallella/make/custom/parallella.cfg
+++ b/c/src/lib/libbsp/epiphany/parallella/make/custom/parallella.cfg
@@ -4,4 +4,6 @@ RTEMS_CPU = epiphany
 
 CPU_CFLAGS = 
 
-CFLAGS_OPTIMIZE_V ?= -O0 -g
+CFLAGS_OPTIMIZE_V ?= -Os -ffunction-sections -fdata-sections
+
+LDFLAGS = -Wl,--gc-sections
