--- a/c/src/lib/libbsp/epiphany/parallella/make/custom/parallella.cfg
+++ b/c/src/lib/libbsp/epiphany/parallella/make/custom/parallella.cfg
@@ -4,6 +4,6 @@ RTEMS_CPU = epiphany
 
 CPU_CFLAGS = 
 
-CFLAGS_OPTIMIZE_V ?= -Os -ffunction-sections -fdata-sections
+CFLAGS_OPTIMIZE_V ?= -Os -g -ffunction-sections -fdata-sections
 
 LDFLAGS = -Wl,--gc-sections
