--- a/cpukit/libcsupport/Makefile.am
+++ b/cpukit/libcsupport/Makefile.am
@@ -80,9 +80,9 @@ endif
 
 DIRECTORY_SCAN_C_FILES =
 ## Newlib SHOULD have provided this one
-DIRECTORY_SCAN_C_FILES += #src/readdir_r.c
+DIRECTORY_SCAN_C_FILES += src/readdir_r.c
 ## Comment out when using these from newlib's unix directory
-DIRECTORY_SCAN_C_FILES += #src/getcwd.c
+DIRECTORY_SCAN_C_FILES += src/getcwd.c
 
 ID_C_FILES = src/getegid.c src/geteuid.c src/getgid.c src/getgroups.c \
     src/getlogin.c src/getpgrp.c src/getpid.c src/getppid.c src/getuid.c \
@@ -90,20 +90,20 @@ ID_C_FILES = src/getegid.c src/geteuid.c src/getgid.c src/getgroups.c \
     src/setsid.c
 
 MALLOC_C_FILES = src/malloc_initialize.c src/calloc.c src/malloc.c \
-     src/rtems_heap_null_extend.c
-#    src/realloc.c src/_calloc_r.c src/_malloc_r.c \
-#    src/free.c src/_free_r.c \
-#    src/_realloc_r.c src/mallocfreespace.c \
-#    src/mallocgetheapptr.c src/mallocsetheapptr.c \
-#    src/mallocinfo.c src/malloc_walk.c \
-#    src/posix_memalign.c \
-#    src/rtems_memalign.c src/malloc_deferred.c \
-#    src/malloc_dirtier.c src/malloc_p.h src/rtems_malloc.c \
-#    src/rtems_heap_extend_via_sbrk.c \
-#    src/rtems_heap_extend.c \
-#    src/rtems_heap_greedy.c
-#MALLOC_C_FILES += src/cachealignedalloc.c
-#MALLOC_C_FILES += src/cachecoherentalloc.c
+    src/rtems_heap_null_extend.c \
+    src/realloc.c src/_calloc_r.c src/_malloc_r.c \
+    src/free.c src/_free_r.c \
+    src/_realloc_r.c src/mallocfreespace.c \
+    src/mallocgetheapptr.c src/mallocsetheapptr.c \
+    src/mallocinfo.c src/malloc_walk.c \
+    src/posix_memalign.c \
+    src/rtems_memalign.c src/malloc_deferred.c \
+    src/malloc_dirtier.c src/malloc_p.h src/rtems_malloc.c \
+    src/rtems_heap_extend_via_sbrk.c \
+    src/rtems_heap_extend.c \
+    src/rtems_heap_greedy.c
+MALLOC_C_FILES += src/cachealignedalloc.c
+MALLOC_C_FILES += src/cachecoherentalloc.c
 
 PASSWORD_GROUP_C_FILES = #src/pwdgrp.c
 PASSWORD_GROUP_C_FILES += #src/getgrent.c
@@ -112,24 +112,24 @@ PASSWORD_GROUP_C_FILES += #src/getpwent.c
 
 TERMINAL_IDENTIFICATION_C_FILES = #src/ctermid.c
 ## 20 Nov 2008: Now using these from newlib's posix directory
-TERMINAL_IDENTIFICATION_C_FILES += #src/isatty.c src/isatty_r.c
+TERMINAL_IDENTIFICATION_C_FILES += src/isatty.c src/isatty_r.c
 ## Comment out when using these from newlib's unix directory
-TERMINAL_IDENTIFICATION_C_FILES += #src/ttyname.c
+TERMINAL_IDENTIFICATION_C_FILES += src/ttyname.c
 
 LIBC_GLUE_C_FILES = src/newlibc_reent.c src/newlibc_init.c src/newlibc_exit.c \
-    #src/__getpid.c src/__gettod.c src/__times.c \
-    #src/truncate.c src/access.c src/lstat.c src/pathconf.c \
-    #src/newlibc_reent.c src/newlibc_init.c src/newlibc_exit.c \
+    src/__getpid.c src/__gettod.c src/__times.c \
+    src/truncate.c src/access.c src/lstat.c src/pathconf.c \
+    src/newlibc_reent.c src/newlibc_init.c src/newlibc_exit.c \
     src/kill_noposix.c src/utsname.c src/realpath.c
 
-BSD_LIBC_C_FILES = #src/strlcpy.c src/strlcat.c src/issetugid.c
+BSD_LIBC_C_FILES = src/strlcpy.c src/strlcat.c src/issetugid.c
 
-libcsupport_a_SOURCES = src/gxx_wrappers.c src/getchark.c src/printk.c \
-    src/printk_plugin.c src/putk.c src/vprintk.c \
+libcsupport_a_SOURCES = src/gxx_wrappers.c src/getchark.c \
+    src/printk_plugin.c src/putk.c \
     $(BSD_LIBC_C_FILES) $(BASE_FS_C_FILES) $(MALLOC_C_FILES) \
     $(ERROR_C_FILES) $(ASSOCIATION_C_FILES)
-    #src/sup_fs_location.c \
-    #src/printk_plugin.c src/putk.c src/vprintk.c \
+    #src/sup_fs_location.c src/vprintk.c \
+    #src/printk_plugin.c src/putk.c src/vprintk.c src/printk.c \
     #src/rtems_putc.c \
     #src/printf_plugin.c \
     #src/sup_fs_eval_path.c \
