--- a/testsuites/smptests/Makefile.am
+++ b/testsuites/smptests/Makefile.am
@@ -30,6 +30,7 @@ SUBDIRS += smpschedaffinity02
 SUBDIRS += smpschedaffinity03
 SUBDIRS += smpschedaffinity04
 SUBDIRS += smpschedaffinity05
+SUBDIRS += smpschedpfair01
 SUBDIRS += smpscheduler01
 SUBDIRS += smpscheduler02
 SUBDIRS += smpscheduler03
