--- a/testsuites/smptests/configure.ac
+++ b/testsuites/smptests/configure.ac
@@ -88,6 +88,7 @@ smpschedaffinity02/Makefile
 smpschedaffinity03/Makefile
 smpschedaffinity04/Makefile
 smpschedaffinity05/Makefile
+smpschedpfair01/Makefile
 smpscheduler01/Makefile
 smpscheduler02/Makefile
 smpscheduler03/Makefile
