--- a/testsuites/configure.ac
+++ b/testsuites/configure.ac
@@ -41,7 +41,8 @@ if test "$enable_tests" = "yes"; then
     AC_CONFIG_SUBDIRS(smptests)
   fi
   # Now do performance tests
-  AC_CONFIG_SUBDIRS(libtests sptests tmtests psxtmtests rhealstone)
+#  AC_CONFIG_SUBDIRS(libtests sptests tmtests psxtmtests rhealstone)
+  AC_CONFIG_SUBDIRS(tmtests)
 fi
 
 # Explicitly list all Makefiles here
